--- a/css/tedx.css
+++ b/css/tedx.css
@@ -1,22 +1,13 @@
 .intro {
 	position: fixed;
+    top: 0;
+    left: 0;
 	z-index: 10;
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	background: white;
-
-   /* -webkit-transition: -webkit-transform 0.6s;
-	transition: transform 0.6s;
-	-webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
-	transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);*/
 }
-
-/*.container--open .intro {
-	-webkit-transform: translate3d(0, -100%, 0) translate3d(0, 250px, 0);
-	transform: translate3d(0, -100%, 0) translate3d(0, 250px, 0);
-
-}*/
 
 /* Fullscreen image */
 .intro__image {
@@ -86,137 +77,11 @@
     margin: 0 auto;
 	background-color: #636363;
 	color: white;
+    z-index: 2;
 }
 
 .navbar a {
 	margin: 0 auto;
-}
-
-
-/*.navbar {
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-
-    height: 4rem;
-    line-height: 4rem;
-    margin: 0 auto 0 auto;
-    padding: 0;
-    padding-left: 3vw;
-    padding-right: 3vw;
-    overflow: hidden;
-	position: absolute;
-    width: calc(100% - 60rem);
-    bottom: 4rem;
-    max-width: 72rem;
-    left: 30rem;
-    bottom: 0vh;
-	z-index: 99;
-} */
-
-
-/*.navbar ul.nav_button{
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    -moz-flex-grow: 1;
-    -webkit-flex-grow: 1;
-    -ms-flex-grow: 1;
-    flex-grow: 1;
-    -moz-flex-shrink: 1;
-    -webkit-flex-shrink: 1;
-    -ms-flex-shrink: 1;
-    flex-shrink: 1;
-
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-} */
-
-/* .navbar ul{
-
-    background-color: rgba(241, 232, 217, 0.5);
-    position: relative;
-    list-style: none;
-    text-align: center;
-
-    -moz-flex-grow: 0;
-    -webkit-flex-grow: 0;
-    -ms-flex-grow: 0;
-    flex-grow: 0;
-    -moz-flex-shrink: 0;
-    -webkit-flex-shrink: 0;
-    -ms-flex-shrink: 0;
-    flex-shrink: 0;
-    margin: 0;
-    padding: 0;
-}
-*/
-
-/*
-.navbar ul.nav_button li {
-    display: block;
-    padding-left: 0;
-
-    -moz-transition: background-color .15s ease-in;
-    -o-transition: background-color .15s ease-in;
-    -webkit-transition: background-color .15s ease-in;
-}
-
-.navbar ul.nav_button li:hover{
-    background-color:rgba(241, 232, 217, 0.9);
-}
-
-.navbar ul.nav_button li a{
-    display: inline-block;
-    outline: none;
-    padding: 0 2rem;
-
-    font-size: 0.8rem;
-    color: white;
-    text-align: center;
-    font-weight: 900;
-    letter-spacing: 0.075em;
-    text-transform: uppercase;
-    vertical-align: baseline;
-}
-*/
-
-
-.navbar ul.nav_icon{
-    width: 70%;
-    /*text-align: center;*/
-}
-
-.navbar ul.nav_icon li {
-    display: inline-block;
-    padding-left: 1vw;
-    padding-right: 1vw;
-}
-
-.navbar ul.nav_icon li a{
-    height: 20px;
-    width: 20px;
-}
-
-.navbar ul.mute_btn{
-    width: 30%;
-}
-
-.navbar ul.mute_btn li {
-    display: inline-block;
-}
-
-.navbar ul.mute_btn:after {
-    content : "";
-    position: absolute;
-    left:0;
-    top: 10%;
-    width: 1px;
-    height: 80%;
-    background: #555;
 }
 
 /* Trigger button with SVG */
@@ -472,7 +337,7 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	margin: -25px 0 0 -25px;
+	margin: -25px 0 0 -25px; 
 	-webkit-animation: loader 0.5s infinite ease-in-out both;
 	-moz-animation: loader 0.5s infinite ease-in-out both;
 	animation: loader 0.5s infinite ease-in-out both;
@@ -519,7 +384,7 @@
     bottom: 0;
     left: 0;
     overflow: hidden;
-    z-index: -1;
+    z-index: 1;
 }
 
 .video-background > video {
@@ -592,6 +457,7 @@
     position: fixed;
     top: 4vh; 
     left: 5vw;
+    z-index: 2;
 }
 
 @media screen and (max-width: 615px) {
